# swig-cmake

./: CMakeLists.txt  example.h  example.i
